--- a/src/main/resources/FXML/Menu.fxml
+++ b/src/main/resources/FXML/Menu.fxml
@@ -2,6 +2,9 @@
 
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.control.MenuButton?>
+<?import javafx.scene.control.MenuItem?>
+<?import javafx.scene.control.RadioButton?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
@@ -11,14 +14,14 @@
 <?import javafx.scene.paint.Stop?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane prefHeight="560.0" prefWidth="870.0" xmlns="http://javafx.com/javafx/20.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.DominionDMS.SnakeGame.Controllers.ViewController">
+<AnchorPane prefHeight="560.0" prefWidth="870.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.DominionDMS.SnakeGame.Controllers.ViewController">
    <children>
       <ImageView fitHeight="560.0" fitWidth="870.0">
          <image>
-            <Image url="@../images/MenuBackground.jpg" />
+            <Image url="@../images/Food/MenuBackground.jpg" />
          </image>
       </ImageView>
-      <Label layoutX="297.0" prefHeight="117.0" prefWidth="307.0" text="SNAKE">
+      <Label layoutX="140.0" layoutY="14.0" prefHeight="117.0" prefWidth="591.0" text="SNAKE GAME">
          <font>
             <Font name="Wingdings 2" size="96.0" />
          </font>
@@ -39,31 +42,59 @@
             </RadialGradient>
          </textFill>
       </Label>
-      <Button fx:id="Start" layoutX="368.0" layoutY="233.0" mnemonicParsing="false" onAction="#gameSetup" prefHeight="47.0" prefWidth="141.0" text="Start">
+      <Button fx:id="Start" layoutX="272.0" layoutY="233.0" mnemonicParsing="false" onAction="#gameSetup" prefHeight="59.0" prefWidth="153.0" text="Start">
          <font>
             <Font name="Yu Gothic Bold" size="24.0" />
          </font>
       </Button>
-      <Button fx:id="Leaderboard" layoutX="328.0" layoutY="295.0" mnemonicParsing="false" onAction="#gameSetup" prefHeight="47.0" prefWidth="246.0" text="Leaderboard" textFill="#170909">
+      <Button fx:id="Leaderboard" layoutX="272.0" layoutY="332.0" mnemonicParsing="false" onAction="#gameSetup" prefHeight="51.0" prefWidth="189.0" text="Leaderboard" textFill="#170909">
          <font>
             <Font name="Yu Gothic UI Bold" size="24.0" />
          </font>
       </Button>
-      <Button fx:id="Settings" layoutX="353.0" layoutY="372.0" mnemonicParsing="false" onAction="#gameSetup" prefHeight="34.0" prefWidth="164.0" text="Settings" textFill="#170909">
+      <TextField fx:id="nameText" layoutX="358.0" layoutY="160.0" prefHeight="27.0" prefWidth="153.0">
+         <font>
+            <Font name="System Bold" size="24.0" />
+         </font></TextField>
+      <Button fx:id="report" layoutX="272.0" layoutY="412.0" mnemonicParsing="false" onAction="#report" prefHeight="35.0" prefWidth="189.0" text="Report a Bug" textFill="#170909">
          <font>
             <Font name="Yu Gothic Bold" size="24.0" />
          </font>
       </Button>
-      <TextField fx:id="nameText" layoutX="361.0" layoutY="160.0" prefHeight="40.0" prefWidth="156.0" />
-      <Button fx:id="report" layoutX="330.0" layoutY="457.0" mnemonicParsing="false" onAction="#gameSetup" prefHeight="47.0" prefWidth="216.0" text="Report a Bug" textFill="#170909">
-         <font>
-            <Font name="Yu Gothic Bold" size="24.0" />
-         </font>
-      </Button>
-      <Label layoutX="265.0" layoutY="163.0" minWidth="68.0" prefHeight="28.0" prefWidth="87.0" text="NAME:" textFill="#efff00">
+      <Label layoutX="272.0" layoutY="169.0" minWidth="68.0" prefHeight="28.0" prefWidth="87.0" text="NAME:" textFill="#efff00">
          <font>
             <Font name="Yu Gothic UI Bold" size="23.0" />
          </font>
       </Label>
+      <MenuButton fx:id="Theme" layoutX="435.0" layoutY="230.0" mnemonicParsing="false" text="Theme">
+        <items>
+          <MenuItem fx:id="Summer" mnemonicParsing="false" onAction="#changeTheme" text="Summer" />
+          <MenuItem fx:id="Christmas" mnemonicParsing="false" onAction="#changeTheme" text="Christmas" />
+            <MenuItem fx:id="Halloween" mnemonicParsing="false" onAction="#changeTheme" text="Halloween" />
+        </items>
+         <font>
+            <Font name="Yu Gothic Bold" size="14.0" />
+         </font>
+      </MenuButton>
+      <RadioButton fx:id="Sound" layoutX="23.0" layoutY="418.0" mnemonicParsing="false" onAction="#changeSound" text="Sound">
+         <font>
+            <Font name="Yu Gothic UI Bold" size="24.0" />
+         </font>
+      </RadioButton>
+      <MenuButton fx:id="Difficulty" layoutX="435.0" layoutY="267.0" mnemonicParsing="false" text="Difficulty">
+         <items>
+            <MenuItem fx:id="Easy" mnemonicParsing="false" onAction="#changeLevel" text="Easy" />
+            <MenuItem fx:id="Medium" mnemonicParsing="false" onAction="#changeLevel" text="Medium" />
+            <MenuItem fx:id="Hard" mnemonicParsing="false" onAction="#changeLevel" text="Hard" />
+         </items>
+         <font>
+            <Font name="Yu Gothic Bold" size="14.0" />
+         </font>
+      </MenuButton>
+      <Button fx:id="exitButton" layoutX="28.0" layoutY="472.0" mnemonicParsing="false" onAction="#exit" prefHeight="34.0" prefWidth="101.0" text="Exit" textFill="#2f1010">
+         <font>
+            <Font name="Yu Gothic Bold" size="24.0" />
+         </font>
+      </Button>
    </children>
 </AnchorPane>
